@@ -9,7 +9,7 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
-import sootup.core.jimple.basic.Immediate;
+import sootup.core.jimple.common.Immediate;
 import sootup.core.jimple.common.expr.JDynamicInvokeExpr;
 import sootup.core.jimple.common.stmt.InvokableStmt;
 import sootup.core.model.SootMethod;
@@ -59,37 +59,34 @@ public class RecordTest extends MinimalBytecodeTestSuiteBase {
         method.getBody().getStmts().stream()
             .filter(stmt -> stmt instanceof InvokableStmt)
             .map(stmt -> (InvokableStmt) stmt)
-            .filter(InvokableStmt::containsInvokeExpr)
             .map(InvokableStmt::getInvokeExpr)
             .filter(Optional::isPresent)
             .map(Optional::get)
             .filter(abstractInvokeExpr -> abstractInvokeExpr instanceof JDynamicInvokeExpr)
             .map(abstractInvokeExpr -> (JDynamicInvokeExpr) abstractInvokeExpr)
-            .collect(Collectors.toList());
+            .toList();
     assertEquals(1, dynamicInvokes.size());
     JDynamicInvokeExpr invoke = dynamicInvokes.get(0);
 
     // test bootstrap args
     List<Immediate> bootTrapArgs = invoke.getBootstrapArgs();
-    assertTrue(bootTrapArgs.contains(JavaJimple.getInstance().newClassConstant("LRecordTest;")));
-    assertTrue(bootTrapArgs.contains(JavaJimple.getInstance().newStringConstant("a;b")));
+    assertTrue(bootTrapArgs.contains(JavaJimple.newClassConstant("LRecordTest;")));
+    assertTrue(bootTrapArgs.contains(JavaJimple.newStringConstant("a;b")));
     assertTrue(
         bootTrapArgs.contains(
-            JavaJimple.getInstance()
-                .newMethodHandle(
-                    new FieldSignature(
-                        new JavaClassType("RecordTest", new PackageName("")),
-                        "a",
-                        PrimitiveType.getInt()),
-                    1)));
+            JavaJimple.newMethodHandle(
+                new FieldSignature(
+                    new JavaClassType("RecordTest", new PackageName("")),
+                    "a",
+                    PrimitiveType.getInt()),
+                1)));
     assertTrue(
         bootTrapArgs.contains(
-            JavaJimple.getInstance()
-                .newMethodHandle(
-                    new FieldSignature(
-                        new JavaClassType("RecordTest", new PackageName("")),
-                        "b",
-                        new JavaClassType("String", new PackageName("java.lang"))),
-                    1)));
+            JavaJimple.newMethodHandle(
+                new FieldSignature(
+                    new JavaClassType("RecordTest", new PackageName("")),
+                    "b",
+                    new JavaClassType("String", new PackageName("java.lang"))),
+                1)));
   }
 }
